--- a/BuzzSloth/manifest.json
+++ b/BuzzSloth/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "BuzzSloth",
-  "version": "0.1",
+  "version": "0.2",
   "description": "Replaces obnoxious buzzwords and phrases with the word 'sloth'.",
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-			"js": ["jquery-1.11.1.js", "sloth_script.js"],
+			"js": ["sloth_script.js"],
 			"run_at": "document_end"
     }
   ],
